objects/Emp_Details__c.object
<CustomObject>
    <fields>
        <fullName>Depart_ment__c</fullName>
        <label>Depart_ment</label>
        <referenceTo>Depart_ment__c</referenceTo>
        <relationshipLabel>Empdetails</relationshipLabel>
        <relationshipName>Empdetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <externalId>true</externalId>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>AssManager</fullName>
                </value>
                <value>
                    <fullName>TeamLead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Emp_Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Emp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Empdetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>